# Tetris

./: .gitignore  CMakeLists.txt  README.md
qt-tetris-poc/src/: TetrisGridWidget.cpp  TetrisGridWidget.h  main.cpp
qt-tetris/src/: TetrisController.cpp  TetrisController.h  TetrisGridWidget.cpp  TetrisGridWidget.h  TetrisRenderer.cpp  TetrisRenderer.h  main.cpp
qt-tetris/src/model/: Board.cpp  Board.h  GameConfig.h  GameState.cpp  GameState.h  Tetromino.cpp  Tetromino.h
